--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,6 +7,16 @@
     <title>Vite App</title>
   </head>
   <body>
+    <header class="header">
+      <div class="header-container">
+      <h1 class="header-title">CHINA</h1>
+      <p class="header-desc">
+        Click Here to Learn More About China
+      </p>
+      </div>
+    <div class="header-image"></div>
+    </header>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
