--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,15 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
-    <header class="header">
-      <div class="header-container">
-      <h1 class="header-title">CHINA</h1>
-      <p class="header-desc">
-        Click Here to Learn More About China
-      </p>
-      </div>
-    <div class="header-image"></div>
+    <header class="box">
+      <div class="text">CHINA</div>
+      <div class="line"></div>
+      <div class="home">Home Food Attraction Regions</div>
     </header>
+
 
     
     <script type="module" src="/main.js"></script>
