--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,7 +10,11 @@
     <header class="box">
       <div class="text">CHINA</div>
       <div class="line"></div>
-      <div class="home">Home Food Attraction Regions</div>
+      <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
+        <input type="button" value="FOOD" class="btn" id="btn2">
+        <input type="button" value="ATTRACTION" class="btn" id="btn3">
+        <input type="button" value="REGION" class="btn" id="btn4">
+      </div>
     </header>
 
 
