--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,16 +7,22 @@
     <title>Vite App</title>
   </head>
   <body>
+  <h1>
     <header class="box">
-      <div class="text">CHINA</div>
-      <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
-        <input type="button" value="FOOD" class="btn" id="btn2">
-        <input type="button" value="ATTRACTION" class="btn" id="btn3">
-        <input type="button" value="REGION" class="btn" id="btn4">
-      </div>
+    <div class="text">CHINA</div>
+    <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
+      <input type="button" value="FOOD" class="btn" id="btn2">
+      <input type="button" value="ATTRACTION" class="btn" id="btn3">
+      <input type="button" value="REGION" class="btn" id="btn4">
+    </div>
+  </header>
+  <div class="pic"></div>
+  </h1>
+  <h2>
+    <header class="Food">
+      <div class="text2">FOOD</div>
     </header>
-    <div class="pic"></div>
-
+  </h2>
     
     <script type="module" src="/main.js"></script>
   </body>
