--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -21,6 +21,7 @@
   <h2>
     <header class="Food">
       <div class="text2">FOOD</div>
+      <div class="image"></div>
     </header>
   </h2>
     
