--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,9 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-  <h1>
-    <header class="box">
-    <div class="text">CHINA</div>
+  <header class="box">
+    <h1>CHINA</h1>
     <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
       <input type="button" value="FOOD" class="btn" id="btn2">
       <input type="button" value="ATTRACTION" class="btn" id="btn3">
@@ -17,13 +16,18 @@
     </div>
   </header>
   <div class="pic"></div>
-  </h1>
-  <h2>
-    <header class="Food">
-      <div class="text2">FOOD</div>
-      <div class="image"></div>
-    </header>
-  </h2>
+  
+  
+  <header class="Food">
+      <h2>FOOD</h2>
+      <div class="box box-1"></div>
+      <div class="box box-2"></div>
+      <div class="box box-3"></div>
+      <div class="box box-4"></div>
+      <div class="box box-5"></div>
+      <div class="box box-6"></div>
+   </header>
+  
     
     <script type="module" src="/main.js"></script>
   </body>
