--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-  <header class="box">
+  <header class="boxx">
     <h1>CHINA</h1>
     <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
       <input type="button" value="FOOD" class="btn" id="btn2">
@@ -20,12 +20,16 @@
   
   <header class="Food">
       <h2>FOOD</h2>
+    <div class="flex stuff">      
       <div class="box box-1"></div>
       <div class="box box-2"></div>
       <div class="box box-3"></div>
+    </div>
+    <div class="flex stoff">
       <div class="box box-4"></div>
       <div class="box box-5"></div>
       <div class="box box-6"></div>
+    </div>
    </header>
   
     
