--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -31,6 +31,18 @@
       <div class="box box-6"></div>
     </div>
    </header>
+
+  <header class="att">
+    <h3>ATTRACTION</h3>
+    <div class="flex stuff">      
+      <div class="boxs box-7"></div>
+      <div class="boxs box-8"></div>
+    </div>
+    <div class="flex stoff">
+      <div class="boxs box-9"></div>
+      <div class="boxs box-10"></div>
+    </div> 
+  </header> 
   
     
     <script type="module" src="/main.js"></script>
