--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -33,7 +33,7 @@
    </header>
 
   <header class="att">
-    <h3>ATTRACTION</h3>
+    <h2>ATTRACTION</h2>
     <div class="flex stuff">      
       <div class="boxs box-7"></div>
       <div class="boxs box-8"></div>
@@ -44,6 +44,12 @@
     </div> 
   </header> 
   
+  <header class="region">
+    <h2>REGION</h2>
+    <div class="flex stpff">
+      <div class="boxz box-11"></div>
+    </div>
+  </header>
     
     <script type="module" src="/main.js"></script>
   </body>
