--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,51 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+  
   <body>
-  <header class="boxx">
-    <h1>CHINA</h1>
-    <div class="home"> <input type="button" value="HOME" class="btn" id="btn1" >
-      <input type="button" value="FOOD" class="btn" id="btn2">
-      <input type="button" value="ATTRACTION" class="btn" id="btn3">
-      <input type="button" value="REGION" class="btn" id="btn4">
-    </div>
-  </header>
-  <div class="pic"></div>
+    <header class="boxx">
+      <h1>CHINA</h1>
+      <div class="home"> <input type="button" value="HOME" class="btn" id="btn1">
+        <input type="button" value="FOOD" class="btn" id="btn2">
+        <input type="button" value="ATTRACTION" class="btn" id="btn3">
+        <input type="button" value="REGION" class="btn" id="btn4">
+      </div>
+    </header>
+    <div class="pic"></div>
   
   
-  <header class="Food">
+    <header class="Food">
       <h2>FOOD</h2>
-    <div class="flex stuff">      
-      <div class="box box-1"></div>
-      <div class="box box-2"></div>
-      <div class="box box-3"></div>
-    </div>
-    <div class="flex stoff">
-      <div class="box box-4"></div>
-      <div class="box box-5"></div>
-      <div class="box box-6"></div>
-    </div>
-   </header>
-
-  <header class="att">
-    <h2>ATTRACTION</h2>
-    <div class="flex stuff">      
-      <div class="boxs box-7"></div>
-      <div class="boxs box-8"></div>
-    </div>
-    <div class="flex stoff">
-      <div class="boxs box-9"></div>
-      <div class="boxs box-10"></div>
-    </div> 
-  </header> 
+      <div class="flex stuff">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+      </div>
+      <div class="flex stoff">
+        <div class="box box-4"></div>
+        <div class="box box-5"></div>
+        <div class="box box-6"></div>
+      </div>
+    </header>
   
-  <header class="region">
-    <h2>REGION</h2>
-    <div class="flex stpff">
-      <div class="boxz box-11"></div>
-    </div>
-  </header>
-    
+    <header class="att">
+      <h2>ATTRACTION</h2>
+      <div class="flex stuff">
+        <div class="boxs box-7"></div>
+        <div class="boxs box-8"></div>
+      </div>
+      <div class="flex stoff">
+        <div class="boxs box-9"></div>
+        <div class="boxs box-10"></div>
+      </div>
+    </header>
+  
+    <header class="region">
+      <h2>REGION</h2>
+      <div class="flex stpff">
+        <div class="boxz box-11"></div>
+        <div class="boxl box-12">
+          <div class="read">
+            <div class="c">🟠North China
+              Name in Pinyin: Huabei
+              Population: 137,250,000 (10.2% of China's total)
+              Area: 1,556,828 square kilometres (16.2% of China's total)
+              Provinces: Beijing, Tianjin, Hebei, Shanxi, Inner Mongolia</div>
+            <div class="v">🟡Northeast China
+              Name in Pinyin: Dongbei
+              Population: 109,100,000 (8.1%)
+              Area: 790,600 square kilometres (8.2%)
+              Provinces: Liaoning, Jilin, Heilongjiang</div>
+            <div class="b">🟢East China
+              Name in Pinyin: Huadong
+              Population: 406,180,000 (30.1%)
+              Area: 798,741 square kilometres (8.3%)
+              Provinces: Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Shandong</div>
+            <div class="n">🟣South China
+              Name in Pinyin: Huanan
+              Population: 175,153,500 (13.0%)
+              Area: 453,790 square kilometres (4.7%)
+              Provinces: Guangdong, Guangxi, Hainan</div>
+            <div class="m">🔵Central China
+              Name in Pinyin: Huazhong
+              Population: 222,390,000 (16.5%)
+              Area: 564,700 square kilometres (5.9%)
+              Provinces: Henan, Hubei, Hunan</div>
+            <div class="l">🟤Southwest China
+              Name in Pinyin: Xinan
+              Population: 199,670,000 (14.8%)
+              Area: 2,367,200 square kilometres (24.6%)
+              Provinces: Chongqing, Sichuan, Guizhou, Yunnan, Tibet</div>
+            <div class="j">🔴Northwest China
+              Name in Pinyin: Xibei
+              Population: 100,890,000 (7.5%)
+              Area: 3,113,100 square kilometres (32.1%)
+              Provinces: Shaanxi, Gansu, Qinghai, Ningxia, Xinjiang</div>
+          </div>
+        </div>
+      </div>
+    </header>
+  
     <script type="module" src="/main.js"></script>
   </body>
-</html>
+  
+  </html>
