--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -51,38 +51,31 @@
         <div class="boxz box-11"></div>
         <div class="boxl box-12">
           <div class="read">
-            <div class="c">🟠North China
-              Name in Pinyin: Huabei
+            <div class="c">🟠North China -
               Population: 137,250,000 (10.2% of China's total)
               Area: 1,556,828 square kilometres (16.2% of China's total)
               Provinces: Beijing, Tianjin, Hebei, Shanxi, Inner Mongolia</div>
-            <div class="v">🟡Northeast China
-              Name in Pinyin: Dongbei
+            <div class="v">🟡Northeast China -
               Population: 109,100,000 (8.1%)
               Area: 790,600 square kilometres (8.2%)
               Provinces: Liaoning, Jilin, Heilongjiang</div>
-            <div class="b">🟢East China
-              Name in Pinyin: Huadong
+            <div class="b">🟢East China -
               Population: 406,180,000 (30.1%)
               Area: 798,741 square kilometres (8.3%)
               Provinces: Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Shandong</div>
-            <div class="n">🟣South China
-              Name in Pinyin: Huanan
+            <div class="n">🟣South China -
               Population: 175,153,500 (13.0%)
               Area: 453,790 square kilometres (4.7%)
               Provinces: Guangdong, Guangxi, Hainan</div>
-            <div class="m">🔵Central China
-              Name in Pinyin: Huazhong
+            <div class="m">🔵Central China -
               Population: 222,390,000 (16.5%)
               Area: 564,700 square kilometres (5.9%)
               Provinces: Henan, Hubei, Hunan</div>
-            <div class="l">🟤Southwest China
-              Name in Pinyin: Xinan
+            <div class="l">🟤Southwest China -
               Population: 199,670,000 (14.8%)
               Area: 2,367,200 square kilometres (24.6%)
               Provinces: Chongqing, Sichuan, Guizhou, Yunnan, Tibet</div>
-            <div class="j">🔴Northwest China
-              Name in Pinyin: Xibei
+            <div class="j">🔴Northwest China -
               Population: 100,890,000 (7.5%)
               Area: 3,113,100 square kilometres (32.1%)
               Provinces: Shaanxi, Gansu, Qinghai, Ningxia, Xinjiang</div>
