--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -22,33 +22,33 @@
     <header class="Food">
       <h2>FOOD</h2>
       <div class="flex stuff">
-        <div class="box box-1"></div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
+        <div class="box box-1">HOT POT</div>
+        <div class="box box-2">FRIED RICE</div>
+        <div class="box box-3">DUMPLINGS</div>
       </div>
       <div class="flex stoff">
-        <div class="box box-4"></div>
-        <div class="box box-5"></div>
-        <div class="box box-6"></div>
+        <div class="box box-4">UDON NOODLES</div>
+        <div class="box box-5">PEKKING DUCK</div>
+        <div class="box box-6">BRASIED PORK</div>
       </div>
     </header>
   
     <header class="att">
       <h2>ATTRACTION</h2>
       <div class="flex stuff">
-        <div class="boxs box-7"></div>
-        <div class="boxs box-8"></div>
+        <div class="boxs box-7">TERRACOTTA ARMY</div>
+        <div class="boxs box-8">SHANGHAI</div>
       </div>
       <div class="flex stoff">
-        <div class="boxs box-9"></div>
-        <div class="boxs box-10"></div>
+        <div class="boxs box-9">GREAT WALL</div>
+        <div class="boxs box-10">FORBIDDEN CITY</div>
       </div>
     </header>
   
     <header class="region">
       <h2>REGION</h2>
       <div class="flex stpff">
-        <div class="boxz box-11"></div>
+        <div class="boxz box-11">GEOGRAPHY</div>
         <div class="boxl box-12">
           <div class="read">
             <div class="c">🟠North China -
