--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,18 +8,18 @@
   </head>
   
   <body>
-    <header class="boxx">
+    <section class="boxx">
       <h1>CHINA</h1>
       <div class="home"> <input type="button" value="HOME" class="btn" id="btn1">
         <input type="button" value="FOOD" class="btn" id="btn2">
         <input type="button" value="ATTRACTION" class="btn" id="btn3">
         <input type="button" value="REGION" class="btn" id="btn4">
       </div>
-    </header>
+    </section>
     <div class="pic"></div>
   
   
-    <header class="Food">
+    <section class="Food">
       <h2>FOOD</h2>
       <div class="flex stuff">
         <div class="box box-1">HOT POT</div>
@@ -31,7 +31,7 @@
         <div class="box box-5">PEKKING DUCK</div>
         <div class="box box-6">BRASIED PORK</div>
       </div>
-    </header>
+    </section>
   
     <header class="att">
       <h2>ATTRACTION</h2>
