--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -33,7 +33,7 @@
       </div>
     </section>
   
-    <header class="att">
+    <section class="att">
       <h2>ATTRACTION</h2>
       <div class="flex stuff">
         <div class="boxs box-7">TERRACOTTA ARMY</div>
@@ -43,9 +43,9 @@
         <div class="boxs box-9">GREAT WALL</div>
         <div class="boxs box-10">FORBIDDEN CITY</div>
       </div>
-    </header>
+    </section>
   
-    <header class="region">
+    <section class="region">
       <h2>REGION</h2>
       <div class="flex stpff">
         <div class="boxz box-11">GEOGRAPHY</div>
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </section>
   
     <script type="module" src="/main.js"></script>
   </body>
