--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,7 +10,9 @@
   <body>
     <section class="boxx">
       <h1>CHINA</h1>
-      <div class="home"> <input type="button" value="HOME" class="btn" id="btn1">
+      <div class="home">
+        <input type="button" value="THEME" class="btn" id="btn69"> 
+        <input type="button" value="HOME" class="btn" id="btn1">
         <input type="button" value="FOOD" class="btn" id="btn2">
         <input type="button" value="ATTRACTION" class="btn" id="btn3">
         <input type="button" value="REGION" class="btn" id="btn4">
