--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,6 +8,7 @@
   </head>
   
   <body>
+    <section class="test"></section>
     <section class="boxx">
       <h1>CHINA</h1>
       <div class="home">
